manifests/default/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plesio-server
  namespace: default
spec:
  replicas: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: plesio-server
  template:
    metadata:
      labels:
        app: plesio-server
    spec:
      serviceAccountName: prod-sa
      containers:
        - name: plesio-server
          image: asia-northeast1-docker.pkg.dev/plesio-infra-407706/plesio-infra-407706-repository/plesio-server:7f0afb95e5b161c2f1acdb7791864684e1091012
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 5
            successThreshold: 1
        - name: cloud-sql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:latest
          args:
            - "--private-ip"
            - "--structured-logs"
            - "--port=3306"
            - "plesio-infra-407706:asia-northeast1:mysql-prod"
          securityContext:
            runAsNonRoot: true
