manifests/default/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plesio-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{“default”: “websocket-backendconfig”}'
spec:
  type: NodePort
  selector:
    app: plesio-server
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
