manifests/default/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plesio-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.global-static-ip-name: plesio-static-ip-prod
    networking.gke.io/managed-certificates: plesio-cert
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
spec:
  defaultBackend:
    service:
      name: plesio-service
      port:
        number: 80
